# scrapower

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUGS.md  Dockerfile  Makefile  README.md  ROADMAP.md  SESSION_DOC.md  docker-compose.yml  fix_n6.py  fix_timeout.py  harvester.yaml  mypy.ini  package-lock.json  pyproject.toml  session actuel entiere V1
.github/workflows/: ci.yml  scrapower-worker.yml
deploy/: patch_kagglesdk.py  scrapower.service
docs/: adr-009-python-runtime.md  architecture-v1.md  audit-2026-06.md  cleanup-plan-v0.7.1.md  github-actions-workflow.yml  kaggle-gpu-debug-report.md  lessons-learned-batch-test.md  worker-package-test.md  worker-protocol-v2.md
examples/: brute_force.wat  estimate_pi.py  magic_number.wat  monte_carlo_pi.wat  multiply.wat  submit_multiply.py  vanity_finder.py  vanity_hash_finder.py
research/: feasibility-study-unified-server.md  free-cloud-tiers-2026.md  resource-aggregation-deep-dive.md
scripts/: backup.sh  batch_collect.py  bundle_modal_worker.py  modal_proxy_diag.py
src/scrapower/worker/: __init__.py  client.py  entry.py  loop.py  pyproject.toml  sandbox.py
src/scrapower/worker/runtimes/: __init__.py  python.py  wasm.py  whisper_runner.py
tests/: benchmark.py  conftest.py  full_test.py  test_add.wat  test_blob_store.py  test_distribution.py  test_domain.py  test_gpu.py  test_python.py  test_scheduler.py  test_smoke.py  test_wasm_runtime.py  test_worker_client.py  test_worker_gateway_http.py  test_worker_gateway_ws.py  test_write.wat
worker-browser/: package-lock.json  package.json
(+68 files in other folders)
