[project]
name = "scrapower"
version = "0.1.0"
description = "Distributed computing aggregator for heterogeneous free resources"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
    "aiofiles>=24.0",
    "structlog>=24.0",
    "aiohttp>=3.10",
    "cryptography>=42.0",
    "wasmtime>=22.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "mypy>=1.14",
    "ruff>=0.8",
]

[project.scripts]
scrapower = "scrapower.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/scrapower/coordinator/auth_oauth.py" = ["E501"]
